--- a/client/account-info-html.html
+++ b/client/account-info-html.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <link href="create-account.css" rel="stylesheet" />
+    <link href="account-info.css" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
@@ -12,16 +12,14 @@
     <div class="container">
         <div id="musaic">mus(ai)c</div>
         <div id="ai-powered">an ai-powered music application</div>
-        <div id="signup-text">sign up</div>
+        <div id="account-info">account info</div>
         <div id="username-box"></div>
-        <div id="enter-username">enter your username</div>
+        <div id="change-username">change username</div>
         <div id="password-box"></div>
-        <div id="enter-password">enter your password</div>
-        <div id="confirm-password-box"></div>
-        <div id="confirm-password">confirm your password</div>
-        <div id="signup-box"></div>
-        <div id="signup">sign up</div>
-        <div id="have-account">already have an account? sign in!</div>
+        <div id="change-password">change password</div>
+        <div id="submit-box"></div>
+        <div id="submit-text">submit</div>
+        <div id="discard-changes">discard changes?</div>
     </div> 
 </body>
 
