clean up comments in project editor code

--- a/client/project-editor-html.html
+++ b/client/project-editor-html.html
@@ -9,28 +9,22 @@
 </head>
 
 <body>
-    <!-- Main Container -->
+    <!-- main container -->
     <div class="container">
-        <!-- Header Section -->
         <header>
-            <!-- <button class="button">share project</button> -->
             <div class="button">share project</div>
             <div>
-                <!-- <h1 class="title">mus(ai)c</h1>
-                <p class="subtitle">an ai-powered music application</p> -->
                 <div id="musaic">mus(ai)c</div>
                 <div id="ai-powered">an ai-powered music application</div>
             </div>
-            <!-- <button class="button">account info</button> -->
             <div class="button">account info</div>
         </header>
 
-        <!-- Main Content Section -->
+        <!-- main content section -->
         <div class="main-content">
-            <!-- Projects Section -->
+            <!-- projects section -->
             <div class="projects-section">
                 <div class="header">
-                    <!-- <h2 class="title">projects</h2> -->
                     <div class="projects-text">projects</div>
                     <button class="add-btn">+</button>
                 </div>
@@ -44,17 +38,14 @@
                 </ul>
             </div>
 
-            <!-- Progressions Section -->
+            <!-- progressions section -->
             <div class="progressions-section">
-                <!-- <h2 class="header">progressions</h2> -->
                 <div class="header">
-                    <!-- <h2 class="title">projects</h2> -->
                     <div class="progressions-text">progressions</div>
                     <button class="add-btn">+</button>
                 </div>
-                <!-- Progression 1 -->
+                <!-- progression 1 -->
                 <div class="progression">
-                    <!-- <h3>progression 1</h3> -->
                     <div class="progression-text">progression 1</div>
                     <div class="lines"></div>
                     <div class="actions">
@@ -63,9 +54,8 @@
                         <button class="export-btn">export</button>
                     </div>
                 </div>
-                <!-- Progression 2 -->
+                <!-- progression 2 -->
                 <div class="progression">
-                    <!-- <h3>progression 2</h3> -->
                     <div class="progression-text">progression 2</div>
                     <div class="lines"></div>
                     <div class="actions">
@@ -80,168 +70,3 @@
 </body>
 
 </html>
-
-<!-- <div id="musaic">mus(ai)c</div>
-        <div id="ai-powered">an ai-powered music application</div>
-        <div id="editor-box" style="width: 100%; height: 100%; background: #97CAED"></div>
-        <div id="project-list-box" style="width: 100%; height: 100%; background: #CBE5F6"></div>
-        <div id="progression-1-box" style="width: 100%; height: 100%; background: #CBE5F6"></div>
-        <div id="progression-2-box" style="width: 100%; height: 100%; background: #CBE5F6"></div>
-        <div id="project-6-box" style="width: 100%; height: 100%; background: #63B0E3"></div>
-        <div id="project-6" style="width: 100%; height: 100%; text-align: center; color: #0F3A57; font-size: 25px; font-family: Inter; font-weight: 400; word-wrap: break-word">project name 6</div>
-        <div id="project-4-box" style="width: 100%; height: 100%; background: #63B0E3"></div>
-        <div id="project-4" style="width: 100%; height: 100%; text-align: center; color: #0F3A57; font-size: 25px; font-family: Inter; font-weight: 400; word-wrap: break-word">project name 4</div>
-        <div id="project-5-box" style="width: 100%; height: 100%; background: #63B0E3"></div>
-        <div id="project-5" style="width: 100%; height: 100%; text-align: center; color: #0F3A57; font-size: 25px; font-family: Inter; font-weight: 400; word-wrap: break-word">project name 5</div>
-        <div id="account-info-box" style="width: 100%; height: 100%; background: #0F3A57"></div>
-        <div id="account-info" style="width: 100%; height: 100%; text-align: center; color: white; font-size: 30px; font-family: Inter; font-weight: 400; word-wrap: break-word">account info</div>
-        <div id="share-project-box" style="width: 100%; height: 100%; background: #0F3A57"></div>
-        <div id="share-project" style="width: 100%; height: 100%; text-align: center; color: white; font-size: 30px; font-family: Inter; font-weight: 400; word-wrap: break-word">share<br/>project</div>
-        <div id="project-1-box" style="width: 100%; height: 100%; background: #3498DB"></div>
-        <div id="projects-text" style="width: 100%; height: 100%; text-align: center; color: #185D8B; font-size: 25px; font-family: Inter; font-weight: 400; word-wrap: break-word">projects</div>
-        <div id="progressions-text" style="width: 100%; height: 100%; text-align: center; color: #0F3A57; font-size: 35px; font-family: Inter; font-weight: 400; word-wrap: break-word">progressions</div>
-        <div id="project-1" style="width: 100%; height: 100%; text-align: center; color: #EEF6FC; font-size: 25px; font-family: Inter; font-weight: 400; word-wrap: break-word">project name 1</div>
-        <div id="project-2-box" style="width: 100%; height: 100%; background: #63B0E3"></div>
-        <div id="project-2" style="width: 100%; height: 100%; text-align: center; color: #0F3A57; font-size: 25px; font-family: Inter; font-weight: 400; word-wrap: break-word">project name 2</div>
-        <div id="project-3-box" style="width: 100%; height: 100%; background: #63B0E3"></div>
-        <div id="project-3" style="width: 100%; height: 100%; text-align: center; color: #0F3A57; font-size: 25px; font-family: Inter; font-weight: 400; word-wrap: break-word">project name 3</div>
-        <div id="add-project-box" style="width: 100%; height: 100%; background: #97CAED"></div>
-        <div id="add-project" style="width: 100%; height: 100%; text-align: center; color: #0F3A57; font-size: 30px; font-family: Inter; font-weight: 400; word-wrap: break-word">+</div>
-        <div id="add-progression-box" style="width: 100%; height: 100%; background: #63B0E3"></div>
-        <div id="add-progression" style="width: 100%; height: 100%; text-align: center; color: #0F3A57; font-size: 30px; font-family: Inter; font-weight: 400; word-wrap: break-word">+</div>
-        <div id="progression-1-text" style="width: 100%; height: 100%; text-align: center; color: #185D8B; font-size: 25px; font-family: Inter; font-weight: 400; word-wrap: break-word">progression 1</div>
-        <div id="progression-2-text" style="width: 100%; height: 100%; text-align: center; color: #185D8B; font-size: 25px; font-family: Inter; font-weight: 400; word-wrap: break-word">progression 2</div>
-        <div id="play-box-progresssion-1" style="width: 100%; height: 100%; background: #EEF6FC"></div>
-        <div id="edit-box-progresssion-1" style="width: 100%; height: 100%; background: #CBE5F6"></div>
-        <div id="export-box-progresssion-1" style="width: 100%; height: 100%; background: #63B0E3"></div>
-        <div id="play-progresssion-1" style="width: 100%; height: 100%; text-align: center; color: #63B0E3; font-size: 25px; font-family: Inter; font-weight: 400; word-wrap: break-word">play</div>
-        <div id="edit-progresssion-1" style="width: 100%; height: 100%; text-align: center; color: #185D8B; font-size: 25px; font-family: Inter; font-weight: 400; word-wrap: break-word">edit</div>
-        <div id="export-progresssion-1" style="width: 100%; height: 100%; text-align: center; color: #EEF6FC; font-size: 25px; font-family: Inter; font-weight: 400; word-wrap: break-word">export</div>
-        <div id="play-box-progresssion-2" style="width: 100%; height: 100%; background: #EEF6FC"></div>
-        <div id="edit-box-progresssion-2" style="width: 100%; height: 100%; background: #CBE5F6"></div>
-        <div id="export-box-progresssion-2" style="width: 100%; height: 100%; background: #63B0E3"></div>
-        <div id="play-progresssion-2" style="width: 100%; height: 100%; text-align: center; color: #63B0E3; font-size: 25px; font-family: Inter; font-weight: 400; word-wrap: break-word">play</div>
-        <div id="edit-progresssion-2" style="width: 100%; height: 100%; text-align: center; color: #185D8B; font-size: 25px; font-family: Inter; font-weight: 400; word-wrap: break-word">edit</div>
-        <div id="export-progresssion-2" style="width: 100%; height: 100%; text-align: center; color: #EEF6FC; font-size: 25px; font-family: Inter; font-weight: 400; word-wrap: break-word">export</div>
-        <div id="progression-1-line-1" style="width: 100%; height: 100%; border: 1px #0F3A57 solid"></div>
-        <div id="progression-1-line-2" style="width: 100%; height: 100%; border: 1px #0F3A57 solid"></div>
-        <div id="progression-1-line-3" style="width: 100%; height: 100%; border: 1px #0F3A57 solid"></div>
-        <div id="progression-1-line-4" style="width: 100%; height: 100%; border: 1px #0F3A57 solid"></div>
-        <div id="progression-1-line-5" style="width: 100%; height: 100%; border: 1px #0F3A57 solid"></div>
-        <div id="progression-2-line-1" style="width: 100%; height: 100%; border: 1px #0F3A57 solid"></div>
-        <div id="progression-2-line-2" style="width: 100%; height: 100%; border: 1px #0F3A57 solid"></div>
-        <div id="progression-2-line-3" style="width: 100%; height: 100%; border: 1px #0F3A57 solid"></div>
-        <div id="progression-2-line-4" style="width: 100%; height: 100%; border: 1px #0F3A57 solid"></div>
-        <div id="progression-2-line-5" style="width: 100%; height: 100%; border: 1px #0F3A57 solid"></div> -->
-
-        <!-- <div class="container">
-            <div id="musaic">mus(ai)c</div>
-            <div id="ai-powered">an ai-powered music application</div>
-            <div id="editor-box"></div>
-            <div id="project-list-box"></div>
-            <div id="progression-1-box"></div>
-            <div id="progression-2-box"></div>
-            <div id="project-6-box"></div>
-            <div id="project-6">project name 6</div>
-            <div id="project-4-box"></div>
-            <div id="project-4">project name 4</div>
-            <div id="project-5-box"></div>
-            <div id="project-5">project name 5</div>
-            <div id="account-info-box"></div>
-            <div id="account-info">account info</div>
-            <div id="share-project-box"></div>
-            <div id="share-project">share<br/>project</div>
-            <div id="project-1-box"></div>
-            <div id="projects-text">projects</div>
-            <div id="progressions-text">progressions</div>
-            <div id="project-1">project name 1</div>
-            <div id="project-2-box"></div>
-            <div id="project-2">project name 2</div>
-            <div id="project-3-box"></div>
-            <div id="project-3">project name 3</div>
-            <div id="add-project-box"></div>
-            <div id="add-project">+</div>
-            <div id="add-progression-box"></div>
-            <div id="add-progression">+</div>
-            <div id="progression-1-text">progression 1</div>
-            <div id="progression-2-text">progression 2</div>
-            <div id="play-box-progresssion-1"></div>
-            <div id="edit-box-progresssion-1"></div>
-            <div id="export-box-progresssion-1"></div>
-            <div id="play-progresssion-1">play</div>
-            <div id="edit-progresssion-1">edit</div>
-            <div id="export-progresssion-1">export</div>
-            <div id="play-box-progresssion-2"></div>
-            <div id="edit-box-progresssion-2"></div>
-            <div id="export-box-progresssion-2"></div>
-            <div id="play-progresssion-2">play</div>
-            <div id="edit-progresssion-2">edit</div>
-            <div id="export-progresssion-2">export</div>
-            <div id="progression-1-line-1"></div>
-            <div id="progression-1-line-2"></div>
-            <div id="progression-1-line-3"></div>
-            <div id="progression-1-line-4"></div>
-            <div id="progression-1-line-5"></div>
-            <div id="progression-2-line-1"></div>
-            <div id="progression-2-line-2"></div>
-            <div id="progression-2-line-3"></div>
-            <div id="progression-2-line-4"></div>
-            <div id="progression-2-line-5"></div>
-        </div> -->
-
-        <!-- <body
-    <div class="container">
-        <div id="musaic">mus(ai)c</div>
-        <div id="ai-powered">an ai-powered music application</div>
-        <div id="editor-box"></div>
-        <div id="project-list-box"></div>
-        <div id="progression-1-box"></div>
-        <div id="progression-2-box"></div>
-        <div id="project-6-box"></div>
-        <div id="project-6">project name 6</div>
-        <div id="project-4-box"></div>
-        <div id="project-4">project name 4</div>
-        <div id="project-5-box"></div>
-        <div id="project-5">project name 5</div>
-        <div id="account-info-box"></div>
-        <div id="account-info">account info</div>
-        <div id="share-project-box"></div>
-        <div id="share-project">share<br/>project</div>
-        <div id="project-1-box"></div>
-        <div id="projects-text">projects</div>
-        <div id="progressions-text">progressions</div>
-        <div id="project-1">project name 1</div>
-        <div id="project-2-box"></div>
-        <div id="project-2">project name 2</div>
-        <div id="project-3-box"></div>
-        <div id="project-3">project name 3</div>
-        <div id="add-project-box"></div>
-        <div id="add-project">+</div>
-        <div id="add-progression-box"></div>
-        <div id="add-progression">+</div>
-        <div id="progression-1-text">progression 1</div>
-        <div id="progression-2-text">progression 2</div>
-        <div id="play-box-progresssion-1"></div>
-        <div id="edit-box-progresssion-1"></div>
-        <div id="export-box-progresssion-1"></div>
-        <div id="play-progresssion-1">play</div>
-        <div id="edit-progresssion-1">edit</div>
-        <div id="export-progresssion-1">export</div>
-        <div id="play-box-progresssion-2"></div>
-        <div id="edit-box-progresssion-2"></div>
-        <div id="export-box-progresssion-2"></div>
-        <div id="play-progresssion-2">play</div>
-        <div id="edit-progresssion-2">edit</div>
-        <div id="export-progresssion-2">export</div>
-        <div id="progression-1-line-1"></div>
-        <div id="progression-1-line-2"></div>
-        <div id="progression-1-line-3"></div>
-        <div id="progression-1-line-4"></div>
-        <div id="progression-1-line-5"></div>
-        <div id="progression-2-line-1"></div>
-        <div id="progression-2-line-2"></div>
-        <div id="progression-2-line-3"></div>
-        <div id="progression-2-line-4"></div>
-        <div id="progression-2-line-5"></div>
-    </div> 
-</body> -->
